--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -83,4 +83,4 @@ swiftmailer:
 fos_user:
     db_driver: orm # other valid values are 'mongodb', 'couchdb' and 'propel'
     firewall_name: main
-    user_class: AppBundle\Entity\User
+    user_class:  Brainapp\CoreBundle\Entity\User
