--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -45,10 +45,57 @@ assetic:
     #java: /usr/bin/java
     filters:
         cssrewrite: ~
-        #closure:
-        #    jar: "%kernel.root_dir%/Resources/java/compiler.jar"
-        #yui_css:
-        #    jar: "%kernel.root_dir%/Resources/java/yuicompressor-2.4.7.jar"
+        lessphp:
+            file: "%kernel.root_dir%/../vendor/leafo/lessphp/lessc.inc.php" 
+            apply_to: "\.less$" 
+    assets:
+        kernel_js:
+            inputs:
+                - "%kernel.root_dir%/../vendor/components/jquery/jquery.js" 
+                - "%kernel.root_dir%/../vendor/twitter/bootstrap/dist/js/bootstrap.js" 
+            output: "js/kernel_js"
+             
+        kernel_css:
+            inputs:
+                - "%kernel.root_dir%/../vendor/twitter/bootstrap/dist/css/bootstrap.css" 
+                - "%kernel.root_dir%/../vendor/twitter/bootstrap/dist/css/bootstrap-theme.css" 
+                - "%kernel.root_dir%/../vendor/components/font-awesome/css/font-awesome.css" 
+            output: 'css/kernel.css'
+
+        # FONTS - BOOTSTRAP 
+        bootstrap_glyphicons_ttf:
+            inputs:
+                -   %kernel.root_dir%/../vendor/twitter/bootstrap/dist/fonts/glyphicons-halflings-regular.ttf 
+            output: "fonts/glyphicons-halflings-regular.ttf" 
+        bootstrap_glyphicons_eot:
+            inputs:
+                - "%kernel.root_dir%/../vendor/twitter/bootstrap/dist/fonts/glyphicons-halflings-regular.eot" 
+            output: "fonts/glyphicons-halflings-regular.eot" 
+        bootstrap_glyphicons_svg:
+            inputs:
+                - "%kernel.root_dir%/../vendor/twitter/bootstrap/dist/fonts/glyphicons-halflings-regular.svg" 
+            output: "fonts/glyphicons-halflings-regular.svg" 
+        bootstrap_glyphicons_woff:
+            inputs:
+                - "%kernel.root_dir%/../vendor/twitter/bootstrap/dist/fonts/glyphicons-halflings-regular.woff" 
+            output: "fonts/glyphicons-halflings-regular.woff" 
+            
+        # FONTS - FONT AWESOME
+        font-awesome-otf:
+            inputs: "%kernel.root_dir%/../vendor/components/font-awesome/fonts/FontAwesome.otf" 
+            output: "fonts/FontAwesome.otf" 
+        font-awesome-eot:
+            inputs: '%kernel.root_dir%/../vendor/components/font-awesome/fonts/fontawesome-webfont.eot'
+            output: 'fonts/fontawesome-webfont.eot'
+        font-awesome-svg:
+            inputs: '%kernel.root_dir%/../vendor/components/font-awesome/fonts/fontawesome-webfont.svg'
+            output: 'fonts/fontawesome-webfont.svg'
+        font-awesome-ttf:
+            inputs: '%kernel.root_dir%/../vendor/components/font-awesome/fonts/fontawesome-webfont.ttf'
+            output: 'fonts/fontawesome-webfont.ttf'
+        font-awesome-woff:
+            inputs: '%kernel.root_dir%/../vendor/components/font-awesome/fonts/fontawesome-webfont.woff'
+            output: 'fonts/fontawesome-webfont.woff'
 
 # Doctrine Configuration
 doctrine:
