added UserBundle to override FOSUserBundle and created layout template + SecurityController + Default layout + Login Layout

--- a/src/Brainapp/CoreBundle/Resources/config/routing.yml
+++ b/src/Brainapp/CoreBundle/Resources/config/routing.yml
@@ -1,6 +1,4 @@
-brainapp_core_homepage:
-    path:     /hello/{name}
-    defaults: { _controller: "BrainappCoreBundle:Default:index" }
-
-fos_user:
-    resource: "@FOSUserBundle/Resources/config/routing/all.xml"
+brainapp_core_default:
+    resource: "@BrainappCoreBundle/Controller/DefaultController.php"
+    type:     annotation 
+    
