--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -134,4 +134,4 @@ swiftmailer:
 fos_user:
     db_driver: orm # other valid values are 'mongodb', 'couchdb' and 'propel'
     firewall_name: main
-    user_class:  Brainapp\CoreBundle\Entity\User
+    user_class:  Brainapp\UserBundle\Entity\User
