--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+brainapp_user:
+    resource: "@BrainappUserBundle/Resources/config/routing.yml"
+    prefix:   /
+
 brainapp_core:
     resource: "@BrainappCoreBundle/Resources/config/routing.yml"
     prefix:   /
