+ added Group support

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -135,3 +135,5 @@ fos_user:
     db_driver: orm # other valid values are 'mongodb', 'couchdb' and 'propel'
     firewall_name: main
     user_class:  Brainapp\UserBundle\Entity\User
+    group:
+        group_class: Brainap\UserBundle\Entity\Group
