--- a/src/Brainapp/UserBundle/Resources/config/routing.yml
+++ b/src/Brainapp/UserBundle/Resources/config/routing.yml
@@ -5,3 +5,7 @@ brainapp_user_security:
     
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
+    
+fos_user_group:
+    resource: "@FOSUserBundle/Resources/config/routing/group.xml"
+    prefix: /group
