--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -66,6 +66,7 @@ assetic:
                 - "%kernel.root_dir%/../vendor/twitter/bootstrap/dist/css/bootstrap-theme.css" 
                 - "%kernel.root_dir%/../vendor/components/font-awesome/css/font-awesome.css" 
             output: 'css/kernel.css'
+            filter: 'cssrewrite'
 
         # FONTS - BOOTSTRAP 
         bootstrap_glyphicons_ttf:
