--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 /web/bundles/
+/web/css/
+/web/js/
+/web/fonts/
+
 /app/bootstrap.php.cache
 /app/cache/*
 /app/config/parameters.yml
@@ -10,7 +14,9 @@
 /vendor/
 /bin/
 /composer.phar
+/components/
+/composer.lock
+
 .buildpath
 .project
 /.settings/
-/components/
