--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -6,7 +6,7 @@ imports:
 # Put parameters here that don't need to change on each machine where the app is deployed
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
-    locale: en
+    locale: de
 
 framework:
     #esi:             ~
@@ -45,9 +45,6 @@ assetic:
     #java: /usr/bin/java
     filters:
         cssrewrite: ~
-        lessphp:
-            file: "%kernel.root_dir%/../vendor/leafo/lessphp/lessc.inc.php" 
-            apply_to: "\.less$" 
     assets:
         kernel_js:
             inputs:
