--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -27,6 +27,8 @@ security:
             form_login:
                 provider: fos_userbundle
                 csrf_provider: security.csrf.token_manager # Use form.csrf_provider instead for Symfony <2.4
+                default_target_path: dashboard_home
+                login_path: /
 
             logout:       true
             anonymous:    true
