--- a/src/Brainapp/CoreBundle/Resources/config/services.yml
+++ b/src/Brainapp/CoreBundle/Resources/config/services.yml
@@ -1,4 +1,6 @@
 services:
+  service_show_user_categories:
+    class: Brainapp\CoreBundle\Dashboard\DashboardShowUserCatController
 #    brainapp_core.example:
 #        class: Brainapp\CoreBundle\Example
 #        arguments: [@service_id, "plain_value", %parameter%]
