--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -84,6 +84,10 @@ assetic:
             inputs:
                 - "%kernel.root_dir%/../vendor/twitter/bootstrap/dist/fonts/glyphicons-halflings-regular.woff" 
             output: "fonts/glyphicons-halflings-regular.woff" 
+        bootstrap_glyphicons_woff2:
+            inputs:
+                - "%kernel.root_dir%/../vendor/twitter/bootstrap/dist/fonts/glyphicons-halflings-regular.woff2" 
+            output: "fonts/glyphicons-halflings-regular.woff2" 
             
         # FONTS - FONT AWESOME
         font-awesome-otf:
