--- a/src/Brainapp/UserBundle/Resources/config/services.yml
+++ b/src/Brainapp/UserBundle/Resources/config/services.yml
@@ -12,3 +12,9 @@ services:
         arguments: ["@router"]
         tags:
             - { name: kernel.event_subscriber }
+            
+      login_listener:
+        class: 'Brainapp\UserBundle\EventListener\LoginListener'
+        arguments: ['@security.context', '@router', '@event_dispatcher', '%first_login_path%']
+        tags:
+            - { name: 'kernel.event_listener', event: 'security.interactive_login', method: onSecurityInteractiveLogin }
