--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -28,6 +28,7 @@ security:
                 provider: fos_userbundle
                 success_handler: authentication_handler
                 failure_handler: authentication_handler
+                check_path: fos_user_security_check
                 csrf_provider: security.csrf.token_manager # Use form.csrf_provider instead for Symfony <2.4
                 default_target_path: dashboard_home
                 login_path: /
